--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quickfund-h5",
+  "name": "react-template",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -41,8 +41,8 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.69",
-    "@types/react": "^18.2.46",
-    "@types/react-dom": "^18.2.18",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
     "customize-cra": "^1.0.0",
     "http-proxy-middleware": "^2.0.6",
     "less": "^4.2.0",
